# fixmylib

./: .env-template  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  sqlx-data.json
.github/workflows/: docker-image.yml  publish-docker-image.yml
builtins/h264_and_jpeg_converter/: convert_h265.sh  convert_photo.sh  copy_folder_timestamp.sh  copy_others.sh  create_folder_structure.sh  preset.yaml
docker/: Dockerfile  README.md
docker/root/etc/cont-init.d/: 01-setup-perms  02-hw-transcoding
docker/root/etc/services.d/fixmylib/: run
examples/convert_heic_and_hevc/: docker-compose.yaml
examples/convert_heic_and_hevc/config/: config.yaml
examples/convert_heic_and_hevc/config_for_docker/: config.yaml
examples/media-in/: IMG_3588.HEIC
migrations/: 1_setup.sql
src/: config.rs  config_parser.rs  db.rs  errors.rs  exiftool.rs  image_converter.rs  main.rs  processor.rs  scanner.rs  scans.rs  time.rs  video_converter.rs
