[package]
name = "fixmylib"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "fixmylib"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
walkdir = "2.3.2"
anyhow = "1.0"
thiserror = "1.0.38"
serde_yaml = "0.9.17"
serde = { version = "1.0", features = ["derive"] }
subprocess = "0.2.9"
rayon = "1.6.1"
clap = { version = "4.1.8", features = ["derive","env"] }
regex = "1.7.1"
log = "0.4"
env_logger = "0.10.0"
