[package]
name = "fixmylib"
version = "0.2.6"
edition = "2021"

[[bin]]
name = "fixmylib"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
walkdir = "2.3.2"
anyhow = "1.0"
thiserror = "1.0.38"
serde_yaml = "0.9.17"
serde = { version = "1.0", features = ["derive"] }
subprocess = "0.2.9"
rayon = "1.6.1"
clap = { version = "4.1.8", features = ["derive","env"] }
regex = "1.7.1"
log = "0.4"
env_logger = "0.10.0"
axum = "0.6.16"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "json","offline"] }
strum = "0.24"
strum_macros = "0.24"
serde_json = "1.0.96"
ffprobe = "0.3.3"
csv = "1.2.2"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
